--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800;900&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,26 +11,36 @@
     font-family: 'Poppins', sans-serif;
 }
 
-:root{
+:root {
     --bg-color: #1f242d;
-    --second-bg-color:#323946;
-    --text-color:#fff;
-    --main-color:#0ef;
-}
-html{
-    font-size: 62.5%;
-    overflow-x: hidden;
+    --second-bg-color: #323946;
+    --text-color: #fff;
+    --main-color: #0ef;
 }
 
-body{
+html,
+body {
+    font-size: 62.5%;
+    overflow-x: hidden;
+    width: 100%;
+}
+
+body {
     background-color: var(--bg-color);
     color: var(--text-color);
 }
-section{
+
+/* Optional: Hide scrollbar if it's not needed */
+body::-webkit-scrollbar {
+    display: none;
+}
+
+section {
     min-height: 100vh;
     padding: 10rem 9% 2rem;
 }
-.header{
+
+.header {
     position: fixed;
     top: 0;
     left: 0;
@@ -41,63 +52,76 @@ section{
     align-items: center;
     z-index: 100;
 }
-.header.sticky{
-    border-bottom:  .1rem solid rgba(0,0,0,.2);
+
+.header.sticky {
+    border-bottom: .1rem solid rgba(0, 0, 0, .2);
 }
-.logo{
+
+.logo {
     font-size: 2.5rem;
     color: var(--text-color);
     font-weight: 600;
     cursor: default;
 }
-.navbar a{
+
+.navbar a {
     font-size: 1.7rem;
     color: var(--text-color);
     margin-left: 4rem;
     transition: .5s;
 }
+
 .navbar a:hover,
-.navbar a.active{
-    color: var(--main-color)   
+.navbar a.active {
+    color: var(--main-color)
 }
-#menu-icon{
+
+#menu-icon {
     font-size: 3.6rem;
     color: var(--text-color);
     display: none;
 }
-.home{
+
+.home {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.home-content{
+
+.home-content {
     margin-right: 5%;
 }
-.home-content h3{
+
+.home-content h3 {
     font-size: 3.2rem;
     font-weight: 700;
 }
-.home-content h3:nth-of-type(2){
+
+.home-content h3:nth-of-type(2) {
     margin-bottom: 2rem;
 }
-.home-content h1{
+
+.home-content h1 {
     font-size: 5.6rem;
     font-weight: 700;
     line-height: 1.3;
 }
-span{
+
+span {
     color: var(--main-color);
 }
 
-.home-img img, .about-img img{
+.home-img img,
+.about-img img {
     width: 25vw;
     border-radius: 20px
 }
 
-.home-content p{
+.home-content p {
     font-size: 1.6rem;
 }
-.social-media a{
+
+.social-media a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -111,12 +135,17 @@ span{
     margin: 3rem 1.5rem 3rem 0;
     transition: .5s ease;
 }
-.social-media a:hover{
+
+.social-media a:hover {
     background: var(--main-color);
     color: var(--second-bg-color);
     box-shadow: 0 0 1rem var(--main-color);
 }
-.cv-btn, .about-btn, .services-btn, .send-btn{
+
+.cv-btn,
+.about-btn,
+.services-btn,
+.send-btn {
     display: inline-block;
     padding: 1rem 2.8rem;
     background: var(--main-color);
@@ -128,51 +157,58 @@ span{
     font-weight: 600;
     transition: .5s ease;
 }
-.cv-btn:hover, .about-btn:hover, .services-btn:hover,  .send-btn:hover{
+
+.cv-btn:hover,
+.about-btn:hover,
+.services-btn:hover,
+.send-btn:hover {
     box-shadow: none;
 }
 
-.about{
+.about {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 2rem;
     background: var(--second-bg-color);
 }
-.heading{
+
+.heading {
     text-align: center;
     font-size: 4.5rem;
 }
-.about-content{
+
+.about-content {
     margin-left: 5%;
 }
-.about-content h2{
+
+.about-content h2 {
     text-align: left;
     line-height: 1.2;
 }
 
-.about-content h3{
-    font-size: 2.6rem;  
+.about-content h3 {
+    font-size: 2.6rem;
 }
 
-.about-content p{
+.about-content p {
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
 }
 
-.services h2{
+.services h2 {
     margin-bottom: 5rem;
 }
 
 .services-container {
     display: flex;
     justify-content: center;
-    align-items: stretch; /* Stretch items to equal height */
+    align-items: center;
     flex-wrap: wrap;
     gap: 2rem;
 }
 
-.services-container .services-box{
+.services-container .services-box {
     flex: 1 1 30rem;
     background: var(--second-bg-color);
     padding: 3rem 2rem 4rem;
@@ -182,37 +218,42 @@ span{
     transition: .5s ease;
 }
 
-.services-container .services-box:hover{
+.services-container .services-box:hover {
     border-color: var(--main-color);
     transform: scale(1.02);
 }
 
-.services-box i{
+.services-box i {
     font-size: 6rem;
     color: var(--main-color);
 }
-.services-box h3{
+
+.services-box h3 {
     font-size: 2.6rem;
 }
-.services-box p{
+
+.services-box p {
     font-size: 1.6rem;
     margin: 1rem 0 3rem;
 }
 
-.contact h2{
+.contact h2 {
     margin-bottom: 3rem;
 }
-.contact form{
+
+.contact form {
     max-width: 70rem;
     margin: 1rem auto;
     text-align: center;
-    margin-bottom: 3rem ;
+    margin-bottom: 3rem;
 }
-.contact form .input-box{
+
+.contact form .input-box {
     display: flex;
     justify-content: space-between;
-    flex-wrap: werp;
+    flex-wrap: wrap;
 }
+
 .contact form .input-box input,
 .contact form textarea {
     width: 100%;
@@ -224,7 +265,7 @@ span{
     margin: .7rem 0;
 }
 
-.contact form .input-box input{
+.contact form .input-box input {
     width: 49%;
 }
 
@@ -232,22 +273,25 @@ span{
     resize: none;
 }
 
-.contact form .send-btn{
+.contact form .send-btn {
     margin-top: 2rem;
     cursor: pointer;
 }
-.footer{
+
+.footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap:  wrap;
+    flex-wrap: wrap;
     padding: 2rem 9%;
     background: var(--second-bg-color);
 }
-.footer-text p{
+
+.footer-text p {
     font-size: 1.6rem;
 }
-.footer-iconTop a{
+
+.footer-iconTop a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -257,91 +301,121 @@ span{
     transition: .5s ease;
 }
 
-.footer-iconTop a:hover{
+.footer-iconTop a:hover {
     box-shadow: 0 0 1rem var(--main-color);
 }
-.footer-iconTop a i{
+
+.footer-iconTop a i {
     font-size: 2.4rem;
     color: var(--second-bg-color);
 }
 
 /*Rsponsive*/
-@media(max-width: 1200px){
-    html{
+@media(max-width: 1200px) {
+    html {
         font-size: 55%;
     }
 }
 
-@media(max-width: 991px){
-    .header{
+@media(max-width: 991px) {
+    .header {
         padding: 2rem 3%;
     }
-    section{
+
+    section {
         padding: 10rem 3% 2rem;
     }
 
-    .home-img img{
+    .home-img img {
         width: 40vw;
         margin-top: 4rem;
         border-radius: 20px;
     }
-    .contact{
+
+    .contact {
         min-height: auto;
     }
 
-    .footer{
+    .footer {
         padding: 2rem;
     }
-    
+
 }
 
-@media(max-width: 768px){
-    #menu-icon{
+@media(max-width: 768px) {
+    #menu-icon {
         display: block;
     }
-    .navbar{
+
+    .navbar {
         position: absolute;
         top: 100%;
         left: 0;
         width: 100%;
         padding: 1rem 3%;
         background: var(--bg-color);
-        border-top: .1rem solid  rgba(0,0,0,.2);
-        box-shadow: 0 .5rem  rgba(0,0,0,.2);
+        border-top: .1rem solid rgba(0, 0, 0, .2);
+        box-shadow: 0 .5rem rgba(0, 0, 0, .2);
         display: none;
     }
-    .navbar.active{
+
+    .navbar.active {
         display: block;
     }
-  
-    .navbar a{
+
+    .navbar a {
         display: block;
         font-size: 2rem;
         margin: 3rem 0;
     }
-    .home{
+
+    .home {
         flex-direction: column;
     }
-    .home-content h3{
+
+    .home-content h3 {
         font-size: 2.6rem;
     }
-    .home-content h1{
+
+    .home-content h1 {
         font-size: 5rem;
     }
-    .home-img img{
+
+    .home-img img {
         width: 60vw;
         margin-top: 4rem;
         border-radius: 20px;
     }
-    .about{
+
+    .about {
         flex-direction: column-reverse;
     }
-    .about-img img{
+
+    .about-img img {
         width: 60vw;
         margin-top: 4rem;
     }
-    .portfolio h2{
+
+    .portfolio h2 {
         margin-bottom: 3rem;
     }
 }
 
+@media (max-width: 425px) {
+    .home-content h1 {
+        font-size: 3.6rem;
+    }
+
+    .home-content h3 {
+        font-size: 2.2rem;
+    }
+
+    .about-content h3,
+    .services-box h3 {
+        font-size: 2.2rem;
+    }
+
+    .navbar a {
+        font-size: 1.8rem;
+    }
+}
